# net-map

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  build.sh
include/: buffer.h  capture.h  parser.h  platform.h  scanner.h  server.h
src/: main.c  resource.rc
src/core/: buffer.c  capture.c  parser.c  scanner.c
src/platform/: platform_linux.c  platform_win.c
src/web/: api.c  server.c  websocket.c
src/web/static/: app.js  index.html  style.css
